--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spotbot-site-backend",
+  "name": "alpha-multi-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
