--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
+    "redis": "^4.3.1",
     "sqlite3": "^5.0.8",
     "uuid": "^8.3.2",
     "ws": "^8.8.1"
