--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^3.0.3",
     "pg": "^8.8.0",
     "sqlite3": "^5.0.8",
     "uuid": "^8.3.2",
@@ -27,6 +28,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/luxon": "^3.0.1",
     "@types/node": "^18.0.0",
     "@types/pg": "^8.6.5",
     "@types/sqlite3": "^3.1.8",
